styles.css
/* 

Header Page 

*/
.btn {
  display: flex;
  flex-direction: column;
  position: relative;
  margin-top: 12px;
}
.button {
  padding: 0.3em 1.2em;
  margin: 0 0.3em 0.3em 0;
  border-radius: 2em;
  box-sizing: border-box;
  border: none;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  color: black;
  background-color: #5030b1;
  text-align: center;
  transition: all 0.5s ease;
  display: flex;
  justify-content: center;
}
.button:hover {
  cursor: pointer;
  background-color: #5030b1;
  border: none;
}
@media all and (max-width: 30em) {
  .button {
    display: block;
    margin: 0.2em auto;
  }
}

/* Button testing */
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
* {
  font-family: "Lato", sans-serif;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
* {
  transition: all 300ms ease;
}
.dark-theme {
  background-color: black;
}
.dark-theme * {
  color: white;
}
.dark-theme .nav__link--ancor {
  color: white;
}

h1,
h2,
h3,
h4,
h5,
h6,
span {
  color: #242424;
  text-align: center;
  line-height: 1.25;
}
html {
  scroll-behavior: smooth;
}
h1 {
  font-size: 36px;
}
p {
  line-height: 1.5;
  font-size: 16px;
}
a {
  text-decoration: none;
  position: relative;
  transition: opacity 300ms ease;
}
i:hover {
  opacity: 0.7;
}
.link__hover-effect:after {
  content: "";
  position: absolute;
  height: 3px;
  width: 0;
  bottom: -3px;
  right: 0;
  transition: all 300ms ease;
}
.link__hover-effect:hover:after {
  width: 100%;
  left: 0;
}
.link__hover-effect--white::after {
  background-color: white;
}
.link__hover-effect--black::after {
  background-color: black;
}
li {
  list-style-type: none;
}
.flex {
  display: flex;
}
.flex-1 {
  flex: 1;
  display: flex;
  justify-content: center;
}
.container {
  padding: 50px 0;
}
.row {
  width: 100%;
  max-width: 800px;
  margin: 0 auto;
  padding: 0 12px;
}

.text--color {
  color: #1c6d81;
}
section:nth-child(even) {
  background-color: grey;
}
.section__title {
  margin-bottom: 20px;
}
/* 

Navigation Bar

*/
nav {
  height: 100px;
  width: 100%;
  max-width: 1000px;
  display: flex;
  margin: 0 auto;
  justify-content: space-between;
  align-items: center;
  padding: 0 12px;
}
.nav__link--list {
  display: flex;
}
.nav__link--ancor {
  margin: 0 12px;
  color: #242424;

  font-weight: 700;
}
.nav__link--ancor-primary {
  background-color: #5030b1;
  padding: 8px 20px;
  border-radius: 50px;
  color: white;
  transition: all 300ms ease;
}
.nav__link--ancor-primary:hover {
  background-color: navy;
}
.personal__logo {
  font-size: 24px;
  margin: 0 12px;
  font-weight: bold;
}
/* 

End of Header Page & Nav Bar


*/

/* Main Body 1 */

#about-me {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}
.about-me__info {
  display: flex;
  flex-direction: column;
}
.about-me__info--container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 1500px;
  text-align: center;
}
.about-me__picture--mask {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  overflow: hidden;
  box-shadow: 0 8px 16px rgba(0, 0, 0, 1);
  margin-bottom: 28px;
  animation: animate-profile-picture 800ms 200ms backwards;
}
@keyframes animate-profile-picture {
  0% {
    transform: scale(0);
  }
  80% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}
.about-me__picture {
  width: 100%;
  /* Improving my own Pic */
  transform: scale(1.2);
  padding-top: 12px;
}
.about-me__info--title {
  margin-bottom: 16px;
  animation: fade-up 650ms 400ms backwards;
}
.about-me__info--para {
  font-size: 20px;
  margin-bottom: 28px;
  animation: fade-up 650ms 600ms backwards;
}
.about-me__links {
  animation: fade-up 650ms 800ms backwards;
}

.about-me__link {
  font-size: 28px;
  color: black;
  padding: 0 16px;
}
@keyframes fade-up {
  0% {
    opacity: 0;
    transform: translateY(40px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}
.about-me__img--container {
  flex: 1;
  display: flex;
  align-items: center;
}
.about-me__img {
  width: 100%;
  animation: fade-in 1200ms 800ms backwards;
  padding: 16px 16px 0 16px;
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.wave {
  display: inline-block;
  animation: animate-wave 500ms infinite ease-in-out;
}
@keyframes animate-wave {
  0% {
    transform: rotate(0);
  }
  50% {
    transform: rotate(35deg);
  }
  100% {
    transform: rotate(0);
  }
}
/* 

Tech Stack

*/
.language {
  width: 25%;
  display: flex;
  justify-content: center;
  position: relative;
  padding-bottom: 16px;
}
.language__img {
  width: 100%;
  max-width: 100px;
  transition: all 300ms;
}

.language .language__img:hover {
  filter: brightness(80%);
  opacity: 0.86;
  transform: scale(0.9);
}
.language__img--wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 25px 16px;
}

.language__list {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}
.language__name {
  position: absolute;
  bottom: 0;
  transform: scale(0);
  transition: all 300ms;
  font-size: 20px;
  font-style: italic;
}
.language:hover .language__name {
  transform: scale(1);
  opacity: 1;
}
.background {
  background-color: rgb(170, 170, 170);
}

/*

Projects

*/
.project {
  margin-bottom: 135px;
}
.project:last-child {
  margin-bottom: 40px;
}
.project__img {
  width: 100%;
  transition: all 150ms ease;
}
.project__wrapper {
  display: flex;
  box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
  border-radius: 20px;
  overflow: hidden;
  position: relative;
}
.project__wrapper::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: #1c1d25;
  opacity: 0;
  transition: opacity 450ms ease;
  z-index: 2;
}
.project:hover .project__wrapper::before {
  opacity: 0.7;
}
.project:hover .project__img {
  transform: scale(1.07);
  filter: blur(5px);
}
.project__list {
  padding-top: 40px;
}

.project__description {
  position: absolute;
  top: 50%;
  transform: translateY(100%);
  left: 90px;
  max-width: 550px;
  z-index: 3;
  opacity: 0;
  transition: transform 450ms, opacity 300ms;
}
.project:hover .project__description {
  opacity: 1;
  transform: translateY(-50%);
}
.project__description--title {
  font-size: 40px;
}
.project__description--para {
  margin: 16px 0;
}
.project__description--link {
  font-size: 20px;
  margin-right: 16px;
}
.project__description--features {
  color: rgb(249, 97, 97);
}

.project__description--title,
.project__description--sub-title,
.project__description--para,
.project__description--link {
  text-align: left;
  color: whitesmoke;
}

@media (hover: hover) and (pointer: fine) {
  .project:hover {
    background: white;
  }
}

/*     Footer      */
footer {
  background-color: #242424;
}
.footer__logo {
  display: flex;
  justify-content: center;
}
.footer__logo--img {
  width: 70px;
  height: 70px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
.footer__social--list {
  width: 100%;
  max-width: 1000px;
  display: flex;
  justify-content: space-around;
  margin-bottom: 28px;
  margin-top: 16px;
}
.footer__row {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding: 8% 0;
}
.footer__copyright {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 12px;
}
.footer__social--link,
.footer__copyright,
.footer__logo--popper {
  color: #fff;
}
.footer__logo--popper {
  position: absolute;
  right: 0;
  top: 30px;
  left: 30px;
  font-weight: 700;
  opacity: 0;
  transition: all 300ms ease;
}
.footer__anchor {
  margin-bottom: 20px;
  position: relative;
}
.footer__anchor:hover .footer__logo--popper {
  transform: translateX(60px);
  opacity: 1;
}

/* Ipad Screen */
@media (max-width: 2000px) {
  .footer__logo--popper {
    display: none;
  }
}

@media (max-width: 1290px) {
  .about-me__info--para {
    font-size: 18px;
    margin: 10px;
  }
  .about-me__img {
    width: 100%;
    padding: 0 250px;
  }
}

/* Small Phones,tablets,large Smartphones */
@media (max-width: 760px) {
  nav {
    height: 68px;
  }

  h1 {
    font-size: 28px;
  }

  .about-me__info--para {
    font-size: 16px;
    padding: 6px;
  }
  .about-me__img {
    width: 100%;
    padding: 0 30px;
  }
  .about-me__link {
    font-size: 24px;
  }

  .language {
    width: calc(100% / 2);
  }
  .project__description--para {
    font-size: 10.5px;
  }
  .project__description--links,
  .project__description--title {
    font-size: 18px;
  }
  .project__description {
    left: 30px;
    padding-right: 30px;
  }
}

/* Nav doesnt show languages and projects on mobile */
/* Makes it look cleaner */
@media (max-width: 472px) {
  .nav__link:not(:last-child) {
    display: none;
  }
}

@media (max-width: 380px) {
  .nav__link:not(:last-child) {
    display: none;
  }
  .about-me__link {
    font-size: 20px;
  }
  .project__description {
    padding: 0;
    left: 0;
    width: 100%;
  }
  .project__description--para {
    display: none;
  }
  .project__description--links {
    display: flex;
    justify-content: center;
    font-size: 12px;
  }
  .project__description--title {
    font-size: 14px;
    line-height: 1;
    text-align: center;
    padding: 10px;
  }
  .project__description--sub-title {
    text-align: center;
    margin: 12px 0;
  }
  .project__description--links {
    padding: 10px;
  }
}

